Renaming glossary.php to dictionary.php

--- a/htdocs/api/0.1/.htaccess
+++ b/htdocs/api/0.1/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 RewriteBase /api/0.1/
 
 RewriteRule ^section/(.*)$ section.php?section=$1 [QSA]
-RewriteRule ^glossary$ glossary.php [QSA]
+RewriteRule ^dictionary$ dictionary.php [QSA]
