A new API method to display structural elements
Per #173.

--- a/htdocs/api/0.1/.htaccess
+++ b/htdocs/api/0.1/.htaccess
@@ -2,4 +2,5 @@ RewriteEngine On
 RewriteBase /api/0.1/
 
 RewriteRule ^section/(.*)$ section.php?section=$1 [QSA]
+RewriteRule ^structure/(.*)$ structure.php?identifier=$1 [QSA]
 RewriteRule ^dictionary$ dictionary.php [QSA]
