--- a/htdocs/api/0.1/.htaccess
+++ b/htdocs/api/0.1/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 RewriteBase /api/0.1/
 
-RewriteRule ^section/(.*)$ section.php?section=$1 [QSA]
+RewriteRule ^law/(.*)$ law.php?section=$1 [QSA]
 RewriteRule ^structure/(.*)$ structure.php?identifier=$1 [QSA]
 RewriteRule ^dictionary$ dictionary.php [QSA]
