Provided support for .txt suffixes
Maps the suffix to a request for a plain text version of a law. Per
#160.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -20,3 +20,7 @@ RewriteRule ^about/$ /about.php [QSA]
 
 # Requests for the API key registration page.
 RewriteRule ^api-key/$ /api-key.php [QSA]
+
+# If this is a request for a plain-text version of a page, translate the extention into a specific
+# request.
+RewriteRule ^(.*)\.txt$ /$1/?plain_text=y
