Make rewrites reflect current language, system.
Modernize language, simplify structure.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,14 +6,11 @@ RewriteBase /
 
 ### SAMPLE REWRITERULES ###
 
-# Requests for a specific section.
+# Requests for a specific law.
 RewriteRule ^([0-9A-Za-z\.]{1,4})-([0-9\.:]{1,10})/$ /law.php?section_number=$1-$2 [QSA]
 
-# Requests for a specific chapter.
-RewriteRule ^([0-9A-Za-z\.]{1,4})/([0-9a-z:\.]{1,8})/$ /structure.php?title_number=$1&chapter_number=$2 [QSA]
-
-# Requests for a specific title.
-RewriteRule ^([0-9A-Za-z\.]{1,4})/$ /structure.php?title_number=$1 [QSA]
+# Requests for a specific structural unit.
+RewriteRule ^((([0-9A-Za-z\.]{1,8})/)+)$ /structure.php [QSA]
 
 # Requests for the about page.
 RewriteRule ^about/$ /about.php [QSA]
