Adding new code url, reorder .htaccess to match specificity rules.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,17 +6,20 @@ RewriteBase /
 
 ### SAMPLE REWRITERULES ###
 
-# Requests for a specific law.
-RewriteRule ^([0-9A-Za-z\.]{1,4})-([0-9\.:]{1,10})/$ /law.php?section_number=$1-$2 [QSA]
-
-# Requests for a specific structural unit.
-RewriteRule ^((([0-9A-Za-z\.]{1,8})/)+)$ /structure.php [QSA]
+# Requests for the code page.
+RewriteRule ^code/$ /code.php [QSA]
 
 # Requests for the about page.
 RewriteRule ^about/$ /about.php [QSA]
 
 # Requests for the API key registration page.
 RewriteRule ^api-key/$ /api-key.php [QSA]
+
+# Requests for a specific law.
+RewriteRule ^([0-9A-Za-z\.]{1,4})-([0-9\.:]{1,10})/$ /law.php?section_number=$1-$2 [QSA]
+
+# Requests for a specific structural unit.
+RewriteRule ^((([0-9A-Za-z\.]{1,8})/)+)$ /structure.php [QSA]
 
 # If this is a request for a plain-text version of a page, translate the extention into a specific
 # request.
