--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -8,7 +8,7 @@ RewriteBase /
 RewriteRule ^index.php.test$ /index.php [QSA]
 
 # Requests for the code page.
-RewriteRule ^code/$ /code.php [QSA]
+RewriteRule ^browse/$ /browse.php [QSA]
 
 # Requests for the about page.
 RewriteRule ^about/$ /about.php [QSA]
