--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 htdocs/admin/.htaccess
 htdocs/admin/.htpasswd
 htdocs/admin/xml/
+htdocs/includes/class.Virginia.inc.php
+htdocs/includes/config.inc.php
