--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ Vagrantfile
 htdocs/admin/.htaccess
 htdocs/admin/.htpasswd
 htdocs/admin/xml/
+includes/class.Virginia.inc.php
+includes/config.inc.php
 htdocs/.sass-cache/
 package.box
