--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,3 +1,5 @@
+DirectoryIndex index.php
+
 # Specify our error pages.
 ErrorDocument 404 /404.php
 
@@ -7,10 +9,11 @@ RewriteBase /
 ### SAMPLE REWRITERULES ###
 
 # Requests for a specific law.
-RewriteRule ^([0-9A-Za-z\.]{1,4})-([0-9\.:]{1,10})/$ /law.php?section_number=$1-$2 [QSA]
+#RewriteRule ^([0-9A-Za-z\.]{1,4})-([0-9A-Za-z\.]{1,4})-([0-9A-Za-z\.]{1,4})/$ /law.php?section_number=$1-$2-$3 [QSA]
+RewriteRule ^((?:[0-9A-Za-z\.]+-)+(?:[0-9A-Za-z\.]+))/$ /law.php?section_number=$1 [QSA]
 
 # Requests for a specific structural unit.
-RewriteRule ^((([0-9A-Za-z\.]{1,8})/)+)$ /structure.php [QSA]
+RewriteRule ^((([-0-9A-Za-z\.]{1,8})/)+)$ /structure.php [QSA]
 
 # Requests for the about page.
 RewriteRule ^about/$ /about.php [QSA]
