Test whether RewriteRules are being respected
Ridiculous hackery. Create a testing-only alias to index.php via
RewriteRule, and then request that alias during the server environment
sanity checks. Per #273.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -4,6 +4,9 @@ ErrorDocument 404 /404.php
 RewriteEngine On
 RewriteBase /
 
+# Provide an aliased URL to test during setup whether RewriteRule works.
+RewriteRule ^index.php.test$ /index.php [QSA]
+
 ### SAMPLE REWRITERULES ###
 
 # Requests for the code page.
