--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 Vagrantfile
 htdocs/admin/.htpasswd
 htdocs/admin/xml/
+includes/class.Virginia.inc.php
+includes/config.inc.php
 htdocs/.sass-cache/
 package.box
