--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -14,6 +14,8 @@ RewriteRule ^index.php.test$ /index.php [QSA]
 
 RewriteRule ^index\.php$ - [L]
 
+RewriteRule ^admin/ /index.php [L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
