--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -22,3 +22,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
 
+
+
+SetEnv INCLUDE_PATH /Users/krues8dr/Sites/statedecoded.localhost/master/includes/
