--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -7,7 +7,13 @@ RewriteBase /
 
 # If this is a request for a plain-text version of a page, translate the extention into a specific
 # request.
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)\.txt$ /$1/?plain_text=y [PT]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)\.json$ /downloads/code-json/$1.json [L]
 
 # Provide an aliased URL to test during setup whether RewriteRule works.
 RewriteRule ^index.php.test$ /index.php [QSA]
