Adding support for JSON importing.  #270 Imported from https://github.com/krues8dr/statedecoded/tree/dccode

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 Vagrantfile
 htdocs/admin/.htpasswd
 htdocs/admin/xml/
+htdocs/admin/import-data/
 includes/class.Virginia.inc.php
 includes/config.inc.php
 htdocs/.sass-cache/
