--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -17,6 +17,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)\.txt$ /$1/?plain_text=y [PT]
 
+# If this is a request for the JSON version of a law, remap the extension to the cached JSON file.
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{DOCUMENT_ROOT}/downloads/current/code-json%{REQUEST_URI} -f
@@ -30,6 +31,7 @@ RewriteRule ^(.*\.xml)$ /downloads/current/code-xml/$1 [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^/]+)/(.*?\.json)$ /downloads/$1/code-json/$2 [L]
+
 
 RewriteRule ^index\.php$ - [L]
 
