--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -49,7 +49,9 @@ RewriteRule ^([^/]+)/(.*?\.json)$ /downloads/$1/code-json/$2 [L]
 RewriteRule ^index\.php$ - [L]
 
 RewriteRule ^admin/ /index.php [L]
-RewriteRule ^downloads/$ /index.php [L]
+
+RewriteCond %{REQUEST_URI} !/downloads/(.+)/ [NC]
+RewriteRule ^downloads/ /index.php [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
